# todo-rust

./: Cargo.toml
src/: lib.rs  main.rs
src/api/: mod.rs  router.rs
src/application/commands/todo/: create.rs
src/domain/models/: todo.rs
src/infrastructure/data/repositories/: todo_repository.rs
