[package]
name = "todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
chrono = { version = "0.4.38", features = ["serde"] }
once_cell = "1.19.0"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
surrealdb = "1.5.5"
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors"] }
